--- a/css/styles.css
+++ b/css/styles.css
@@ -59,12 +59,18 @@ footer {
 .tile img {
   position: relative;
   height: 40vh;
+  transition: all 0.3s ease-in-out;
+
   /* TODO: MODULE_CARDS */
   /* 1. Fill in the required properties. */
 }
 .tile img:hover {
   /* TODO: MODULE_CARDS */
   /* 1. Fill in the required properties. */
+  filter: brightness(0.5);
+  transform: scale(1.05);
+  
+
 }
 
 /* Hint: Notice the position:absolute and z-index properties. */
